[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/FFFFORWA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/SpriteSheet.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD"]
margin_right = 640.0
margin_bottom = 640.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MinesLeft" type="Label" parent="HUD"]
margin_left = 49.0
margin_top = 32.0
margin_right = 85.0
margin_bottom = 54.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.0352941, 0.0352941, 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="HUD"]
margin_left = 487.245
margin_top = 34.1224
margin_right = 523.245
margin_bottom = 56.1224
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.0352941, 0.0352941, 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FaceBG" type="ColorRect" parent="HUD"]
margin_left = 286.411
margin_top = 24.0
margin_right = 358.0
margin_bottom = 91.3857
color = Color( 0.317647, 0.317647, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Face" type="Sprite" parent="HUD/FaceBG"]
position = Vector2( 36.1807, 33.9627 )
scale = Vector2( 7, 7 )
texture = ExtResource( 4 )
vframes = 2
hframes = 12
frame = 12

[node name="Sperator" type="ColorRect" parent="HUD"]
margin_top = 122.449
margin_right = 640.0
margin_bottom = 130.0
color = Color( 0.960784, 0.960784, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HUD"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 286.0
margin_top = 24.0
margin_right = 358.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="MapData" type="TileMap" parent="."]
position = Vector2( 0, 130 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="Tiles" type="TileMap" parent="."]
position = Vector2( 0, 130 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="HUD/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
